[package]
name = "kv_cache_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tonic = "0.10"
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.0"
