[package]
name = "kv_cache_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tonic = "0.10"
prost = "0.12"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
async-trait = "0.1"
rand = "0.8"
hex = "0.4"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
http = "0.2"
base64 = "0.21"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.0"
futures = "0.3"
hyper = "0.14"
