[package]
name = "kv_cache_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
kv_cache_core = { path = "../kv_cache_core" }
bytes = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3" 